removed z-index of header because I have fixed the problem with header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,6 @@ body {
 
 header {
     position: fixed;
-    z-index: 999;
     top: 0;
     width: 100%;
     background-color: #ffffff;
